--- a/src/little-lemon-capstone/src/index.css
+++ b/src/little-lemon-capstone/src/index.css
@@ -1,3 +1,10 @@
+* {
+  border: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,17 +22,9 @@ code {
 .grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 10px;
+  column-gap: 20px;
   max-width: 1200px;
-  margin: auto;
-}
-
-.item {
-  background: lightgreen;
-  padding: 20px;
-  text-align: center;
-  border: 1px solid #ccc;
-  background-color: black;
+  margin: 0 3% 0 3%;
 }
 
 /* Define column sizes using percentages */
@@ -36,8 +35,104 @@ code {
 .col-6  { grid-column: span 6  }
 .col-12 { grid-column: span 12 }
 
-.socialLinks {
-  grid-column: 6 / 8;
+header {
+  height: 12vh;
+  align-items: center;
+}
+
+nav {
+  grid-column: 7 / span 6;
+}
+
+nav > ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+nav li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav a {
+  text-decoration: none;
+}
+
+/* Fonts */
+
+.displayTitle {
+  font-size: 64px;
+  font-family: 'Markazi Text';
+  font-weight: bold;
+}
+
+.subTitle {
+  font-size: 40px;
+  font-family: 'Markazi Text';
+}
+
+.leadText {
+  font-size: 18px;
+  font-family: 'Karla';
+  font-weight: bold;
+}
+
+.sectionTitle {
+  font-size: 20px;
+  font-family: 'Karla';
+  font-weight: bolder;
+}
+
+.sectionCategories {
+  font-size: 16px;
+  font-family: 'Karla';
+  font-weight: bolder;
+}
+
+/* Should be darker than lead text class */
+.cardTitle {
+  font-size: 18px;
+  font-family: 'Karla';
+  font-weight: bold;
+}
+
+.paragraphText {
+  font-size: 16px;
+  font-family: 'Karla';
+  line-height: 20px;
+}
+
+.highlightText {
+  font-size: 16px;
+  font-family: 'Karla';
+  font-weight: bold;
+}
+
+/* Colors */
+
+.primaryGreen {
+  color: #495E57;
+}
+
+.primaryYellow {
+  color: #F4CE14;
+}
+
+.secondaryOrange {
+  color: #EE9972;
+}
+
+.secondaryTan {
+  color: #FBDABB;
+}
+
+.secondaryWhite {
+  color: #EDEFEE;
+}
+
+.secondaryBlack {
+  color: #333333;
 }
 
 /* Make responsive */
@@ -46,5 +141,5 @@ code {
 }
 
 img {
-  width: 300px;
+  max-width: 300px;
 }
