--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -86,10 +86,10 @@ main > article {
 }
 
 /* Weekly Special Section */
-
-.weeklySpecialSection {
-    background-color: #F4CE14;
+.weeklySpecialsArea {
+    background-color: #EDEFEE;;
 }
+
 .weeklySpecialSectionColumnOne {
     grid-column: 1 / 9;
     align-self: center;
@@ -131,24 +131,30 @@ main > article {
 .picture-wrapper {
     height: 200px;
     position: relative;
-    /* overflow: hidden; */
   }
 
 .weeklySpecialCard img {
-    
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     object-fit: cover;
-    
 }
 
 .cardAction {
     padding: 1rem;
 }
 
+/* Testimonial Section */
 
+.testimonialArea {
+    background-color: lch(93.27% 2% 66.8);
+}
+
+.testimonialRowOne {
+    grid-column: 4 / 10;
+    justify-self: center;
+}
 
 /* Footer Section */
 
