--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -128,12 +128,12 @@ main > article {
     margin: 0;
 }
 
-.picture-wrapper {
+.weeklyPictureWrapper {
     height: 200px;
     position: relative;
-  }
+}
 
-.weeklySpecialCard img {
+img {
     width: 100%;
     height: 100%;
     top: 0;
@@ -151,9 +151,45 @@ main > article {
     background-color: lch(93.27% 2% 66.8);
 }
 
-.testimonialRowOne {
-    grid-column: 4 / 10;
+.testimonialTitle {
     justify-self: center;
+}
+
+.testimonialReviews {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 4rem;;
+}
+
+.testimonialCard {
+    border: 1px solid rgb(196, 196, 196);
+    border-radius: 10px;
+    box-shadow: 4px 5px 6px #AAAAAA;
+    width: 180px;
+    height: 180px;
+    padding: 1rem;;
+}
+
+.testimonialCard p {
+    font-size: small;
+}
+
+.testimonialCardHeader {
+    display: flex;
+}
+
+.testimonialPictureWrapper {
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.testimonialStars {
+    display: flex;
+    justify-content: center;
+    padding: 0.5rem 0;
 }
 
 /* Footer Section */
