--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -11,6 +11,14 @@ p span {
     vertical-align: middle;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -85,9 +93,13 @@ main > article {
     position: absolute;
 }
 
+.titlePictureWrapper {
+    height: 537px;
+}
+
 /* Weekly Special Section */
 .weeklySpecialsArea {
-    background-color: #EDEFEE;;
+    background-color: #EDEFEE;
 }
 
 .weeklySpecialSectionColumnOne {
@@ -133,14 +145,6 @@ main > article {
     position: relative;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-}
-
 .cardAction {
     padding: 1rem;
 }
@@ -158,7 +162,7 @@ img {
 .testimonialReviews {
     display: flex;
     justify-content: space-evenly;
-    margin: 4rem;;
+    margin: 4rem;
 }
 
 .testimonialCard {
@@ -167,7 +171,7 @@ img {
     box-shadow: 4px 5px 6px #AAAAAA;
     width: 180px;
     height: 180px;
-    padding: 1rem;;
+    padding: 1rem;
 }
 
 .testimonialCard p {
@@ -190,6 +194,36 @@ img {
     display: flex;
     justify-content: center;
     padding: 0.5rem 0;
+}
+
+.testimonialStars i {
+    margin: 0.2rem;
+}
+
+/* About Section */
+.aboutArea {
+    background-color: #EDEFEE;
+    display: flex;
+}
+
+.aboutContent {
+    margin-left: 20%;
+    width: 30%;
+}
+
+.aboutImageGallery {
+    margin: 0 10% 0 10%;
+}
+
+.aboutPictureWrapperOne {
+    height: 400px;
+    position: relative;
+}
+
+.aboutPictureWrapperTwo {
+    height: 40px;
+    position: relative;
+    margin-left: 40px;
 }
 
 /* Footer Section */
@@ -315,6 +349,4 @@ footer img {
     .col-6, .col-4, .col-3 { width: 100%; } /* Stack on smaller screens */
 }
 
-img {
-    max-width: 300px;
-}
+
