--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -216,6 +216,7 @@ main > article {
 .aboutContent {
     margin-left: 20%;
     width: 30%;
+    align-self: center;
 }
 
 .aboutImageGallery {
@@ -224,19 +225,21 @@ main > article {
     column-gap: 20px;
     gap: 10px;
     margin: 0 10% 0 10%;
+    height: 600px;
 }
 
 .aboutPictureWrapperOne {
     height: 400px;
     position: relative;
+    left: 100px;
     overflow: hidden;
     border-radius: 30px;
 }
 
 .aboutPictureWrapperTwo {
-    height: 40px;
+    height: 400px;
     position: relative;
-    margin-left: 40px;
+    bottom: 200px;;
     overflow: hidden;
     border-radius: 30px;
 }
