--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -52,6 +52,10 @@ img {
     position: relative;
 }
 
+.textLeft {
+    text-align: left;
+}
+
 /* Parent container for the cards */
 .weekly-specials-grid {
     display: grid;
@@ -151,13 +155,11 @@ main > article {
     background-color: var(--secondaryWhite);
 }
 
-.weeklySpecialSectionColumnOne {
-    grid-column: 1 / 9;
-    align-self: center;
-}
-.weeklySpecialSectionColumnTwo {
-    grid-column: 10 / 12;
+.weeklySpecialsHeading {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    margin: 0 5vw 0 5vw;
 }
 
 .weeklySpecialCard {
@@ -252,12 +254,13 @@ main > article {
 /* About Section */
 .aboutArea {
     display: flex;
+    margin: 0 10% 0 10%;
+    align-self: center;
+    justify-content: space-evenly;
 }
 
 .aboutContent {
-    margin-left: 20%;
-    width: 30%;
-    align-self: center;
+    width: 40%;
 }
 
 .aboutImageGallery {
@@ -266,11 +269,11 @@ main > article {
     column-gap: 20px;
     gap: 10px;
     margin: 0 10% 0 10%;
-    height: 600px;
+    height: 480px;
 }
 
 .aboutPictureWrapperOne {
-    height: 400px;
+    height: 340px;
     position: relative;
     left: 100px;
     overflow: hidden;
@@ -278,7 +281,7 @@ main > article {
 }
 
 .aboutPictureWrapperTwo {
-    height: 400px;
+    height: 340px;
     position: relative;
     bottom: 200px;;
     overflow: hidden;
@@ -334,6 +337,15 @@ footer img {
     font-weight: 500;
     white-space: nowrap;
     margin-bottom: 1rem;
+}
+
+.secondaryDisplayTitle {
+    font-size: var(--TitleSize);
+    font-family: var(--TitleFont);
+    color: var(--primaryGreen);
+    font-weight: bolder;
+    text-align: left;
+    white-space: nowrap;
 }
 
 .subTitle {
@@ -404,7 +416,11 @@ footer img {
         margin: 0.2rem;
     }
 
-    .titleSectionColumnTwo {
+    .aboutContent {
+        width: 60%;
+    }
+
+    .tabletHide {
         display: none;
     }
     
@@ -425,6 +441,10 @@ footer img {
         padding: 0;
     }
 
+    .mobileHide {
+        display: none;
+    }
+
     /* Header Section */
 
     .mobileMenuToggle {
@@ -439,10 +459,6 @@ footer img {
         width: 4rem;
     }
 
-    nav > ul {
-        display: none;
-    }
-
     nav li {
         list-style-type: none;
         padding: 0;
@@ -454,12 +470,40 @@ footer img {
         justify-content: center;
     }
 
+    /* Weekly Special Section */
+
+    .weeklySpecialsHeading {
+        flex-direction: column;
+    }
+
+    .weeklySpecialCard {
+        height: 360px;
+        width: 208px;
+    }
+
+    .weekly-specials-grid {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 3rem;
+        padding: 16px;
+        margin: auto 10% auto 10%;
+    }
+
+    /* About Us Section */
+
+    .aboutArea {
+        justify-content: left;
+    }
+
     footer {
         padding: 0 5vw 0 5vw;
     }
 
-    .displayTitle {
+    .wrapTitle {
         white-space: wrap;
+    }
+
+    .sectionTitle {
+        text-align: center;
     }
 }
 
