--- a/src/little-lemon-capstone/src/Styles/Components.css
+++ b/src/little-lemon-capstone/src/Styles/Components.css
@@ -29,6 +29,12 @@ button {
     margin: 1rem 1rem 1rem 0;
     white-space: nowrap;
     min-height: 50px;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: oklch(0.92 0.17 95.2 / 1);
+    cursor: pointer;
 }
 
 p span {
@@ -120,6 +126,10 @@ main > article {
     display: none;
 }
 
+.mobileNavMenu {
+    display: none;
+}
+
 /* Title Section */
 
 .titleArea {
@@ -170,6 +180,11 @@ main > article {
     box-shadow: var(--mainShadow);
     overflow: hidden;
     justify-self: center;
+    transition: transform 0.3s ease;
+}
+
+.weeklySpecialCard:hover {
+    transform: scale(1.05);
 }
 
 .cardBody {
@@ -278,14 +293,30 @@ main > article {
     left: 100px;
     overflow: hidden;
     border-radius: 30px;
+    z-index: 0;
+    transition: transform 0.3s ease;
+}
+
+.aboutPictureWrapperOne:hover {
+    transform: rotate(10deg);
+    cursor: pointer;
+    z-index: 2;
 }
 
 .aboutPictureWrapperTwo {
     height: 340px;
     position: relative;
-    bottom: 200px;;
+    bottom: 200px;
     overflow: hidden;
     border-radius: 30px;
+    z-index: 1;
+    transition: transform 0.4s ease;
+}
+
+.aboutPictureWrapperTwo:hover {
+    transform: rotate(10deg);
+    cursor: pointer;
+    z-index: 0;
 }
 
 /* Footer Section */
@@ -406,6 +437,15 @@ footer img {
     white-space: nowrap;
 }
 
+@keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-8px); }
+  }
+  
+  .bounce-hover:hover {
+    animation: bounce 0.5s ease-in-out;
+  }
+
 
 @media (max-width: 1000px) {
 
@@ -458,6 +498,26 @@ footer img {
         width: 4rem;
         height: 4rem;
         align-items: center;
+        cursor: pointer;
+    }
+
+    .mobileNavMenu {
+        display: block;
+        border: solid 2px var(--secondaryBlack);
+        position: absolute;
+        border-radius: 0.5rem;
+        right: 2rem;
+        background-color: var(--secondaryWhite);
+        width: 10rem;
+        z-index: 1;
+    }
+
+    .mobileNavMenu li {
+        padding: 0.5rem 0 0.5rem 0.5rem;
+    }
+
+    .mobileNavMenu li:not(:last-child) {
+        border-bottom: dotted 1px var(--secondaryBlack);
     }
 
     nav {
@@ -468,6 +528,16 @@ footer img {
         list-style-type: none;
         padding: 0;
         margin: 0;
+        transition: background-color 0.3s ease;
+        cursor: pointer;
+    }
+
+    nav li:hover {
+        background-color: var(--primaryGreen);
+    }
+
+    nav li:hover a {
+        color: var(--secondaryWhite);
     }
 
     .titleSectionColumnOne {
