--- a/src/little-lemon-capstone/src/Styles/Form.css
+++ b/src/little-lemon-capstone/src/Styles/Form.css
@@ -1,6 +1,7 @@
 form {
     padding: 3rem 1rem 1rem;
-    margin-left: 10%;
+    justify-items: start;
+    margin-right: 5rem;
 }
 
 h1 {
@@ -10,6 +11,7 @@ h1 {
 
 form > div {
     margin: 2rem 2rem 2rem 0;
+    width: 100%;
 }
 
 label {
@@ -21,11 +23,44 @@ input {
     border: solid 2px var(--secondaryBlack);
     border-radius: 0.5rem;
     height: 3rem;
-    width: 33%;
+    width: 100%;
     padding: 0.3rem;
+}
+
+select {
+    border: solid 2px var(--secondaryBlack);
+    border-radius: 0.5rem;
+    height: 3rem;
+    width: 100%;
+    padding: 0.3rem;
+}
+
+.pageLayout {
+    display: flex;
+    align-items: center;
+    margin: 0 10% 0 10%;
+}
+
+.pageLayout > div {
+    width: 100%;
 }
 
 .reservation {
     border: solid 2px var(--secondaryBlack);
     border-radius: 0.5rem;
+    box-shadow: var(--hoverShadow);
+    width: 180px;
+    height: 180px;
+    padding: 0.8rem;
+    background-color: var(--secondaryWhite);
+}
+
+.reservation h4 {
+    margin-bottom: 1rem;
+}
+
+@media (max-width: 768px) {
+    .pageLayout {
+        flex-direction: column;
+    }
 }
