--- a/src/little-lemon-capstone/src/Styles/Form.css
+++ b/src/little-lemon-capstone/src/Styles/Form.css
@@ -36,6 +36,10 @@ select {
     padding: 0.3rem;
 }
 
+input:focus:invalid {
+    border: 2px solid red;
+}
+
 .pageLayout {
     display: flex;
     align-items: center;
